src/objects/Issues_Risks__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents an issue or risk with some parts of the project plan.</description>
    <fields>
        <fullName>Actual_Resolution_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>What category is the Issue or Risk fall in</description>
        <inlineHelpText>Select one or more categories that the issue/risk is most closely associated to</inlineHelpText>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Resources</fullName>
                </value>
                <value>
                    <fullName>Scope</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
                <value>
                    <fullName>Timeline</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>IF(NOT(ISPICKVAL(Status__c, &quot;Closed&quot;)), NOW() - CreatedDate,  Actual_Resolution_Date__c - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Detailed description of the issue/risk.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Detailed description of the issue/risk.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impact_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Impact Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <label>Issue / Risk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Issue</fullName>
                    <default>true</default>
                    <label>Issue</label>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Likelihood__c</fullName>
        <description>Likelihood of a Risk.</description>
        <inlineHelpText>10% - Highly unlikely to occur
25% - Somewhat likely to occur
50% - Strong chance to occur
75% - Likely to occur
90% - Most likely to occur</inlineHelpText>
        <label>Likelihood</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10%</fullName>
                    <color>#009900</color>
                    <label>10%</label>
                </value>
                <value>
                    <fullName>25%</fullName>
                    <color>#B6E32E</color>
                    <label>25%</label>
                </value>
                <value>
                    <fullName>50%</fullName>
                    <color>#FFFF66</color>
                    <label>50%</label>
                </value>
                <value>
                    <fullName>75%</fullName>
                    <color>#FF9900</color>
                    <label>75%</label>
                </value>
                <value>
                    <fullName>90%</fullName>
                    <color>#FF0000</color>
                    <label>90%</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Likely_Impact__c</fullName>
        <description>Likely impact of an impending risk.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Likely impact of an impending risk.</inlineHelpText>
        <label>Likely Impact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Logged_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Logged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_Notes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting Notes</label>
        <referenceTo>Meeting_Notes__c</referenceTo>
        <relationshipLabel>Issues/Risks</relationshipLabel>
        <relationshipName>Issues_Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Milestone related to this Issue/Risk.</description>
        <inlineHelpText>Milestone related to this Issue/Risk.</inlineHelpText>
        <label>Milestone</label>
        <referenceTo>Milestone__c</referenceTo>
        <relationshipLabel>Issues/Risks</relationshipLabel>
        <relationshipName>Issues_Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues_Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Past_Due__c</fullName>
        <formula>IF( ISPICKVAL(Status__c , &quot;Open&quot;) &amp;&amp;  Target_Resolution_Date__c &lt; TODAY(), &quot;Yes&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Past Due?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Workstream__c</fullName>
        <inlineHelpText>These values will be customizable based on your project needs.</inlineHelpText>
        <label>Related Workstream</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Case Management</fullName>
                </value>
                <value>
                    <fullName>Contact Management</fullName>
                </value>
                <value>
                    <fullName>Data Integration</fullName>
                </value>
                <value>
                    <fullName>Data Migration</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Lead Management</fullName>
                </value>
                <value>
                    <fullName>Opportunity Management</fullName>
                </value>
                <value>
                    <fullName>Overall Project</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Issues and Risks for this release.</description>
        <inlineHelpText>Issues and Risks for this release.</inlineHelpText>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Issues/Risks</relationshipLabel>
        <relationshipName>Issues_Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Issues/Risks</relationshipLabel>
        <relationshipName>Issues_Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Mitigating_Actions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolution / Mitigating Actions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Mitigation_Plan__c</fullName>
        <description>Document the mitigation plan for this risk.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Document the mitigation plan for this risk.</inlineHelpText>
        <label>Risk Mitigation Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <label>Risk / Issue Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Executive Steering Committee</fullName>
                </value>
                <value>
                    <fullName>Leadership Team</fullName>
                </value>
                <value>
                    <fullName>Project Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity_Level__c</fullName>
        <description>Individual projects can chose specific definition of Severity levels that meet their needs.</description>
        <inlineHelpText>Severity of the impact the Issue or Risk will have on the project if not resolved. Consider immediate and downstream impacts.</inlineHelpText>
        <label>Severity Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Very Low</fullName>
                    <color>#419249</color>
                    <label>1 - Very Low</label>
                </value>
                <value>
                    <fullName>2 - Low</fullName>
                    <color>#B6E32E</color>
                    <label>2 - Low</label>
                </value>
                <value>
                    <fullName>3 - Moderate</fullName>
                    <color>#F3D904</color>
                    <label>3 - Moderate</label>
                </value>
                <value>
                    <fullName>4 - High</fullName>
                    <color>#FF6600</color>
                    <label>4 - High</label>
                </value>
                <value>
                    <fullName>5 - Critical</fullName>
                    <color>#FF0000</color>
                    <label>5 - Critical</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Resolution_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Target Resolution Date</label>
        <type>Date</type>
    </fields>
    <label>Issue/Risk</label>
    <listViews>
        <fullName>All_Issues</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Target_Resolution_Date__c</columns>
        <columns>Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Issues_Risks__c.Issue</value>
        </filters>
        <label>All Issues</label>
    </listViews>
    <listViews>
        <fullName>All_Issues_Risks_All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Target_Resolution_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Closed</value>
        </filters>
        <label>All Issues/Risks</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Issues_Risks_All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Target_Resolution_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open Issues/Risks</label>
    </listViews>
    <listViews>
        <fullName>All_Risks</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Target_Resolution_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Issues_Risks__c.Risk</value>
        </filters>
        <label>All Risks</label>
    </listViews>
    <listViews>
        <fullName>Overdue_Issues</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Target_Resolution_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Issues_Risks__c.Issue</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Target_Resolution_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>All Overdue Issues</label>
    </listViews>
    <listViews>
        <fullName>Overdue_Issues_Risks</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Target_Resolution_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Target_Resolution_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>All Overdue Issues/Risks</label>
    </listViews>
    <listViews>
        <fullName>Overdue_Risks</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Target_Resolution_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Issues_Risks__c.Risk</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Target_Resolution_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>All Overdue Risks</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Risk/Issue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues/Risks</pluralLabel>
    <recordTypes>
        <fullName>Issue</fullName>
        <active>true</active>
        <description>Create/Update any issues with the project.</description>
        <label>Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Risk</fullName>
        <active>true</active>
        <description>Create/Update any risks with the project.</description>
        <label>Risk</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Act_Resloution_Date</fullName>
        <active>true</active>
        <description>Actual Resolution should not be greater than current date.</description>
        <errorConditionFormula>Actual_Resolution_Date__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Actual_Resolution_Date__c</errorDisplayField>
        <errorMessage>Actual resolution date should not be greater than today&apos;s date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IR_Res_Date_Val</fullName>
        <active>false</active>
        <description>Resolution Date should be greater than logged date.</description>
        <errorConditionFormula>OR(Target_Resolution_Date__c  &lt; Logged_Date__c,  Actual_Resolution_Date__c &lt;  Logged_Date__c )</errorConditionFormula>
        <errorMessage>Resolution Date should be greater than issue/risk logged date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MustDescribeOther</fullName>
        <active>true</active>
        <description>User must enter a description of &quot;Other&quot; if it is selected from the MS-Picklist field &apos;Category&apos;</description>
        <errorConditionFormula>AND(INCLUDES(Category__c, &quot;Other&quot;),
ISBLANK(Other_Description__c))</errorConditionFormula>
        <errorDisplayField>Other_Description__c</errorDisplayField>
        <errorMessage>You must enter a description in this field if &apos;Other&apos; is one of your selections for the category.</errorMessage>
    </validationRules>
</CustomObject>